--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <version>2.0.0</version>
   </parent>
   <description>Land Surface Temperature Anomalies Time Series</description>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   <properties>
     <summary>Land Surface Temperature Anomalies Time Series</summary>
     <description>Land Surface Temperature Anomalies Time Series</description>
